# ES_Risk_Compliance

./: INSTALLATION.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  USER_GUIDE.md  create_module.sh  esbuild.js  generate_complete_module.py  generate_doctypes_phase1.py  generate_doctypes_phase2.py  install.sh  install_doctypes.py  package.json  pyproject.toml  requirements.txt  setup.py
es_risk_compliance/: hooks.py  modules.txt
es_risk_compliance/config/: desktop.py  docs.py  es_risk_and_compliance.py
es_risk_compliance/doctype/assessment_control_result/: assessment_control_result.json  assessment_control_result.py
es_risk_compliance/doctype/assessment_finding/: assessment_finding.json  assessment_finding.py
es_risk_compliance/doctype/assessment_team_member/: assessment_team_member.json  assessment_team_member.py
es_risk_compliance/doctype/asset_register/: asset_register.json  asset_register.py
es_risk_compliance/doctype/audit_finding/: audit_finding.json  audit_finding.py
es_risk_compliance/doctype/audit_plan/: audit_plan.json  audit_plan.py
es_risk_compliance/doctype/compliance_assessment/: compliance_assessment.json  compliance_assessment.py
es_risk_compliance/doctype/compliance_framework/: compliance_framework.json  compliance_framework.py
es_risk_compliance/doctype/control_framework_mapping/: control_framework_mapping.json  control_framework_mapping.py
es_risk_compliance/doctype/control_set/: control_set.json  control_set.py
es_risk_compliance/fixtures/: sample_data.py
es_risk_compliance/install/: __init__.py
(+25 files in other folders)
