[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "es_risk_compliance"
version = "1.0.0"
description = "Comprehensive Risk and Compliance Management for ERPNext"
authors = [
    {name = "ES Australia", email = "support@es-au.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Frappe",
]

[project.urls]
Homepage = "https://github.com/yourusername/es_risk_compliance"
Documentation = "https://github.com/yourusername/es_risk_compliance/wiki"
Repository = "https://github.com/yourusername/es_risk_compliance"
"Bug Tracker" = "https://github.com/yourusername/es_risk_compliance/issues"

[tool.flit.module]
name = "es_risk_compliance"
